manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octank
  namespace: octank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: octank
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: octank
    spec:
      containers:
      - name: octank
        image: ghcr.io/ryannoblett/octank:sha-b3ba3ad
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
