manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octank
  namespace: octank
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: octank
